# fusemc

./: .gitignore  Fuse.mds  Makefile.am  Makefile.include  README.md  autogen.sh  configure.ac  make_before_run.sh  make_clean.sh  make_run.sh
Fuse/: CommandLineParser.cs  Config.cs  Extension.cs  Fuse.cs  Fuse.mdp  Fuse.mds  Makefile.am  MediaEngine.cs  Plugin.cs  fuse.in
Fuse/Widgets/: Controls.cs  MainMenu.cs  StatusBar.cs
Fuse/Windows/: EnginesWindow.cs  ExceptionWindow.cs  MainWindow.cs  PluginsWindow.cs  WarningWindow.cs
GStreamerPlaybin/: AssemblyInfo.cs  Engine.cs  GStreamerPlaybinWrapper.mdp  GStreamerPlaybinWrapper.mds  Makefile.am  main.c  make_before_run.sh
MediaEngine.GStreamer/: AssemblyInfo.cs  Engine.cs  Makefile.am  MediaEngine.GStreamer.mdp  Tag.cs  VideoInfo.cs
Nini/: Makefile.am  Nini.mdp
Plugin/: AssemblyInfo.cs  Communicator.cs  DelegateQueue.cs  DialogBase.cs  Dialogs.cs  Events.cs  Makefile.am  PagedList.cs  Plugin.mdp  SeekBar.cs  Timer.cs  Utils.cs  WebDownload.cs
Plugin.Library/: AssemblyInfo.cs  Config.cs  Core.cs  Database.cs  Global.cs  Loader.cs  Makefile.am  Plugin.Library.mdp  Store.cs  Utils.cs
Plugin.Library/DynamicMedia/: AudioCD.cs  DynamicTree.cs  MusicBrainzRelease.cs
Plugin.Library/Folders/: FolderContextMenu.cs  FolderDataManager.cs  FolderMonitor.cs  FolderStore.cs  FolderTree.cs
Plugin.Library/InfoBar/: Content.cs  InfoBar.cs  InfoPanel.cs  QueryInfo.cs  WebService.cs
Plugin.Library/InfoBar/AudioScrobbler/ArtistInfo/: ArtistBox.cs  ArtistInfo.cs  ArtistInfoHelp.cs
Plugin.Library/InfoBar/AudioScrobbler/ArtistInfo/AlbumDetails/: AlbumDetails.cs  TrackInfo.cs
Plugin.Library/InfoBar/AudioScrobbler/ArtistInfo/SimilarArtists/: SimilarArtist.cs  SimilarArtistBox.cs  SimilarArtists.cs
Plugin.Library/InfoBar/AudioScrobbler/ArtistInfo/SimilarTracks/: SimilarTrack.cs  SimilarTrackBox.cs  SimilarTracks.cs
Plugin.Library/InfoBar/AudioScrobbler/ArtistInfo/TopAlbums/: TopAlbum.cs  TopAlbumBox.cs  TopAlbums.cs
Plugin.Library/InfoBar/AudioScrobbler/ArtistInfo/TopTracks/: TopTrack.cs  TopTracks.cs
Plugin.Library/InfoBar/AudioScrobbler/Profile/: Profile.cs  ProfileInfo.cs  ProfileOptions.cs  Scrobbler.cs  ScrobblerQueue.cs
Plugin.Library/InfoBar/AudioScrobbler/Profile/Friends/: Friend.cs  FriendBox.cs  Friends.cs
Plugin.Library/InfoBar/AudioScrobbler/Profile/RecommendedArtists/: RecommendedArtist.cs  RecommendedArtists.cs
Plugin.Library/InfoBar/AudioScrobbler/Profile/TopArtists/: TopArtist.cs  TopArtistBox.cs  TopArtists.cs
Plugin.Library/InfoBar/LyricWiki/: Album.cs  AlbumBox.cs  Lyrics.cs  LyricsHelp.cs  SearchArtist.cs  SongLyrics.cs
Plugin.Library/InfoBar/Widgets/: ContentButton.cs  ContentButtonBox.cs  ContentTabs.cs  ImageBox.cs  InfoButton.cs  LinkLabel.cs  PageNavigator.cs  SearchBox.cs
Plugin.Library/Media/: MediaContextMenu.cs  MediaDataManager.cs  MediaPopup.cs  MediaStore.cs  MediaTree.cs
Plugin.Library/MediaCollections/: DynamicMedia.cs  Folder.cs  MediaCollection.cs  Playlist.cs
Plugin.Library/MediaTypes/: AudioCDMedia.cs  FileMedia.cs  FolderMedia.cs  Media.cs  PlaylistMedia.cs
Plugin.Library/Playlists/: PlaylistContextMenu.cs  PlaylistDataManager.cs  PlaylistStore.cs  PlaylistTree.cs
Plugin.Library/Widgets/: BorderWidget.cs  Library.cs  OrganizerTree.cs  Progress.cs  QuickLoad.cs  SortColumn.cs  TopBar.cs
Plugin.Library/Windows/: AddWindow.cs  MediaEdit.cs
Plugin.News/: AssemblyInfo.cs  Config.cs  DataManager.cs  Feed.cs  Item.cs  MainPage.cs  Makefile.am  Plugin.News.mdp  template.html
Plugin.News/Widgets/: FeedContextMenu.cs  News.cs  NewsViewer.cs  TopBar.cs
Plugin.News/Windows/: AddWindow.cs  NewsPopup.cs
Plugin.Theatre/: AssemblyInfo.cs  Config.cs  Core.cs  DataManager.cs  Global.cs  Makefile.am  Media.cs  Plugin.Theatre.mdp
Plugin.Theatre/Widgets/: Fullscreen.cs  FullscreenControls.cs  Theatre.cs  TopBar.cs  VideoContextMenu.cs  VideoWidget.cs
Plugin.TrayIcon/: AssemblyInfo.cs  Makefile.am  Plugin.TrayIcon.mdp  Plugin.cs  TrayIcon.cs  TrayLib.cs  TrayPopup.cs
Plugin/Interfaces/: IEngineTag.cs  IFuse.cs  IMediaControls.cs  IMediaEngine.cs  IPlugin.cs  IPluginOptions.cs  IVideoInfo.cs
RssReader/: AssemblyInfo.cs  Makefile.am  RssChannel.cs  RssFeed.cs  RssItem.cs  RssReader.mdp
